--- a/styles.css
+++ b/styles.css
@@ -49,6 +49,23 @@ html, body {
     font-size: 14px;
 }
 
+#floatingBtn {
+    position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+  background: #363636;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+  font-size: 24px;
+  cursor: pointer;
+  display: none;
+}
+
+
 /* Input area */
 #inputArea {
     background: #1a1a1a;
